fix: avoid file conflict when re-run start.sh

--- a/ci/docker-compose.yaml
+++ b/ci/docker-compose.yaml
@@ -13,17 +13,18 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${SA_PASSWORD:-postgres}
+      POSTGRES_PASSWORD: ${SA_PASSWORD}
+      PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
+      - type: bind
+        source: ../tmp/data
+        target: /var/lib/postgresql/data
       - type: bind
         source: ./conf/pg_hba.conf
         target: /var/lib/postgresql/data/pg_hba.conf
       - type: bind
         source: ./conf/postgresql.conf
         target: /var/config/postgresql.conf
-      - type: volume
-        source: postgres-volume
-        target: /var/lib/postgresql/data
     command:
       - "postgres"
       - "-c"
@@ -33,6 +34,7 @@ services:
       interval: 15s
       timeout: 10s
       start_period: 10s
+      retries: 5
   flyway:
     container_name: flyway
     build:
@@ -51,11 +53,8 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      SA_PASSWORD: ${SA_PASSWORD:-postgres}
+      SA_PASSWORD: ${SA_PASSWORD}
 networks:
   default:
     name: vnworkday
-    external: true
-volumes:
-  postgres-volume:
     external: true
