ci: add setup.sh for database initialization & revise docker files

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,18 +1,15 @@
 # Flyway only supports x86_64 architecture, so we need to use an image with x86_64 architecture to build the Flyway image.
 FROM --platform=linux/amd64 ubuntu:24.10 AS build
 
-ARG flyway_version=10.14.0
+ARG flyway_version=10.15.0
 
-RUN apt-get update && apt-get install -y curl
-
-# Install Postgres server
-#RUN apt-get install postgresql-16 -y \
-#    && ln -s /usr/lib/postgresql/16/bin/* /usr/local/bin
+RUN apt-get update -y \
+    && apt-get install wget postgresql-client -y \
+    && ln -s /usr/lib/postgresql/16/bin/* /usr/local/bin
 
 # Install Flyway
-RUN curl -s https://repo1.maven.org/maven2/org/flywaydb/flyway-commandline/${flyway_version}/flyway-commandline-${flyway_version}-linux-x64.tar.gz | tar xz -C /opt \
-    && ln -s /opt/flyway-${flyway_version}/flyway /usr/local/bin \
-    && ln -s /opt/flyway-${flyway_version}/flyway /opt/flyway
+RUN wget -qO- https://download.red-gate.com/maven/release/com/redgate/flyway/flyway-commandline/${flyway_version}/flyway-commandline-${flyway_version}-linux-x64.tar.gz | tar -xvz \
+    && ln -s `pwd`/flyway-${flyway_version}/flyway /usr/local/bin
 
 # Clean up the image
 RUN apt-get autoremove -y \
@@ -24,7 +21,8 @@ FROM scratch
 LABEL com.vnworkday.docker.maintainer="Duy Nguyen" \
     com.vnworkday.docker.version="1.0" \
     com.vnworkday.docker.description="Postgres Flyway Migration Container for CI/CD pipeline" \
-    com.vnworkday.docker.name="flyway"
+    com.vnworkday.docker.name="flyway" \
+    com.vnworkday.docker.project="vnworkday"
 
 COPY --from=build / /
 
