--- a/ci/docker-compose.yaml
+++ b/ci/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     pull_policy: missing
     labels:
       com.vnworkday.docker.name: postgres
+      com.vnworkday.docker.project: vnworkday
     ports:
       - "5432:5432"
     restart: unless-stopped
@@ -43,6 +44,7 @@ services:
     pull_policy: missing
     labels:
       com.vnworkday.docker.name: flyway
+      com.vnworkday.docker.project: vnworkday
     restart: always
     configs:
       - migrations
