--- a/ci/conf/postgresql.conf
+++ b/ci/conf/postgresql.conf
@@ -57,7 +57,7 @@ dynamic_shared_memory_type = posix	# the default is the first option
 					# (change requires restart)
 
 # - Asynchronous Behavior -
-effective_io_concurrency = 2		# 1-1000; 0 disables prefetching
+effective_io_concurrency = 4		# 1-1000; 0 disables prefetching
 max_worker_processes = 8		# (change requires restart)
 #max_parallel_maintenance_workers = 2	# taken from max_parallel_workers
 max_parallel_workers_per_gather = 8	# taken from max_parallel_workers
@@ -71,7 +71,7 @@ max_parallel_workers_per_gather = 8	# taken from max_parallel_workers
 
 # - Settings -
 
-wal_level = logical			# minimal, replica, or logical
+wal_level = replica			# minimal, replica, or logical
 					# (change requires restart)
 #fsync = on				# flush data to disk for crash safety
 					# (turning this off can cause
@@ -102,7 +102,7 @@ synchronous_commit = off		# synchronization level;
 # - Checkpoints -
 
 #checkpoint_timeout = 5min		# range 30s-1d
-max_wal_size = 1GB
+max_wal_size = 500MB
 min_wal_size = 80MB
 checkpoint_completion_target = 0.9	# checkpoint target duration, 0.0 - 1.0
 #checkpoint_flush_after = 256kB		# measured in pages, 0 disables
