--- a/migrations/account/flyway.toml
+++ b/migrations/account/flyway.toml
@@ -1,8 +1,8 @@
 [flyway]
-locations = ["filesystem:migrations/account/sql"]
+locations = ["filesystem:./migrations/account/sql"]
 failOnMissingLocations = true
+baselineOnMigrate = true
 
 [environments.local]
-url = "jdbc:postgresql://localhost:5432/account"
+url = "jdbc:postgresql://postgres:5432/account?timezone=Asia/Ho_Chi_Minh"
 user = "dba_account"
-password = "123456"
