--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -19,6 +19,5 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Run SQL Guardian
-        uses: geomais/sql-guardian@main
+      # TODO: Do anything make sense
   
